--- a/UnofficialCrusaderPatch/Localization/Arabic.txt
+++ b/UnofficialCrusaderPatch/Localization/Arabic.txt
@@ -242,8 +242,8 @@ ui_welcometext
 "(Stronghold Crusader) هذا اصلاح اخطاء غير رسمي للعبة
 [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch) هذا المشروع متوفر كمشروع مفتوح المصدر على
 
-جميع اصدارات العبة مدعومه, لاكن بما أن هذا المشروع تم انشاءه على نسخة متجر ستيم, ربما يكون هناك عدم توافق
-فستظهر عن التنصيب رسائل اخطاء. اصدار التصحيح سيظهر في الزاوية السفلى اليسرى للعبة 
+جميع اصدارات العبة مدعومه, لكن بما أن هذا المشروع تم انشاءه على نسخة متجر ستيم اصدار 1.41, ربما يكون هناك عدم توافق
+فستظهر عند التثبيت رسائل اخطاء. اصدار التصحيح سيظهر في اسفل يسار القائمة الرئيسية للعبة 
 قبل بدء في عمل أي تعديل, سيتم انشاء نسخة احتياطية للملفات. ويمكن استعادة الملفات السابقة عن طريق الضغط على (الغاء التثبيت) أو بشكل يدوي
 
 (UCP) الفريق خلف مشروع  
