--- a/UnofficialCrusaderPatch/Localization/Chinese.txt
+++ b/UnofficialCrusaderPatch/Localization/Chinese.txt
@@ -1,5 +1,5 @@
 // ======================
-//         2.15
+//         DEV
 // ======================
 
 o_fix_map_sending
@@ -11,6 +11,10 @@ o_fix_map_sending_descr
 {
 "Reduces the length of the sent map name."
 }
+
+// ======================
+//         2.15
+// ======================
 
 u_spearmen_run
 {
