--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -6,9 +6,24 @@ o_fast_placing
 	"Fast placing"
 }
 
-o_fast_placing_descr
+o_fast_placing_common
 {
-	"Hold left mouse button down to place killing pits, good/bad things and woodcutters."
+	"killing pit, pitch ditch, woodcutter, good & bad things, mill, water pot, bakery, hovel)"
+}
+
+o_fast_placing_common_descr
+{
+	" "
+}
+
+o_fast_placing_all
+{
+	"all builds"
+}
+
+o_fast_placing_all_descr
+{
+	"Hold left mouse button down to place buildings."
 }
 
 u_spearmen_run
