--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -1,6 +1,31 @@
 // ======================
 //         dev
 // ======================
+o_fast_placing
+{
+	"Fast placing"
+}
+
+o_fast_placing_common
+{
+	"killing pit, pitch ditch, woodcutter, good & bad things, mill, water pot, bakery, hovel)"
+}
+
+o_fast_placing_common_descr
+{
+	" "
+}
+
+o_fast_placing_all
+{
+	"all builds"
+}
+
+o_fast_placing_all_descr
+{
+	"Hold left mouse button down to place buildings."
+}
+
 u_spearmen_run
 {
 "Spearmen run by default instead of walking"
