--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -2,6 +2,16 @@
 //         DEV
 // ======================
 
+o_fix_map_sending
+{
+"Enable map sending in multiplayer"
+}
+
+o_fix_map_sending_descr
+{
+"Reduces the length of the sent map name, to make map sending possible again!"
+}
+
 o_fix_rapid_deletion_bug
 {
 "Fix resources rapid deletion"
@@ -11,6 +21,7 @@ o_fix_rapid_deletion_bug_descr
 {
 "Deleting buildings with a fast auto clicker no longer gives resources for more than one deletion."
 }
+
 
 // ======================
 //         2.15
