--- a/UnofficialCrusaderPatch/Localization/Hungarian.txt
+++ b/UnofficialCrusaderPatch/Localization/Hungarian.txt
@@ -1,6 +1,22 @@
 // ======================
 //         dev
 // ======================
+
+o_allow_overbuilding
+{
+"Allow overbuilding workers and units"
+}
+
+o_allow_overbuilding_descr
+{
+"Allows the player to overbuild workers with buildings, while allowing to overbuild units with walls and towers making them pop at the top."
+}
+
+u_assassinfix
+{
+"Fix assassin unit pathing and behaviour"
+}
+
 u_assassinfix
 {
 "Fix assassin unit pathing and behaviour"
