--- a/UnofficialCrusaderPatch/Localization/German.txt
+++ b/UnofficialCrusaderPatch/Localization/German.txt
@@ -1,6 +1,32 @@
 // ======================
 //         DEV
 // ======================
+
+ai_resources_rebuy
+{
+"Improve AI restocking of needed goods"
+}
+
+ai_resources_rebuy_descr
+{
+"The AI often doesn't restock goods even if it has the gold for it, leaving its production chains running dry. This option reduces the amount of time the AI waits for its stocks to be empty before restocking the necessary goods."
+}
+
+ai_nowood_maxtime_descr
+{
+"Time in 1/12th of months until the AI restocks 5 wood."
+}
+
+ai_noiron_maxtime_descr
+{
+"Time in 1/12th of months until the AI restocks 2 iron."
+}
+
+ai_noflour_maxtime_descr
+{
+"Time in 1/12th of months until the AI restocks 2 flour."
+}
+
 u_jestermoveto_assassin
 {
 	"Stop the jester from visiting assassins"
