--- a/UnofficialCrusaderPatch/Localization/Arabic.txt
+++ b/UnofficialCrusaderPatch/Localization/Arabic.txt
@@ -402,7 +402,7 @@ ui_welcometext
 "(Stronghold Crusader) هذا اصلاح اخطاء غير رسمي للعبة
 [GitHub](https://github.com/Sh0wdown/UnofficialCrusaderPatch) هذا المشروع مفتوح المصدر متوفر على
 
-جميع اصدارات العبة مدعومه, لكن بما أن هذا المشروع تم انشاءه على نسخة متجر ستيم اصدار 1.41, ربما يكون هناك عدم توافق
+جميع اصدارات العبة مدعومه, لكن بما أن هذا المشروع تم انشاءه على نسخة متجر ستيم اصدار 1.41, ربما يكون هناك عدم توافق مع الإصدارات السابقة
 فستظهر عند التثبيت رسائل اخطاء. اصدار التصحيح سيظهر في اسفل يسار القائمة الرئيسية للعبة 
 قبل بدء في عمل أي تعديل, سيتم انشاء نسخة احتياطية للملفات. ويمكن استعادة الملفات السابقة عن طريق الضغط على (الغاء التثبيت) أو بشكل يدوي
 
