--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -218,7 +218,7 @@ o_change_siege_engine_spawn_position_catapult
 
 o_change_siege_engine_spawn_position_catapult_descr
 {
-"Осадные механизмы теперь появляется по центру , вместо появления в верхнем углу палатки."
+"Осадные механизмы теперь появляются в центре , вместо того чтобы появиться в верхнем углу палатки."
 }
 
 o_stop_player_keep_rotation
